--- a/src/components/contact/contact.scss
+++ b/src/components/contact/contact.scss
@@ -34,6 +34,7 @@
       flex-direction: column;
       align-items: center;
       justify-content: space-around;
+      
 
       input {
         width: 300px;
@@ -50,6 +51,7 @@
         width: 300px;
         height: 200px;
         font-size: 14px;
+        border-left-color: grey;
 
         @include mobile {
           width: 200px;
