Resume PDF navigation added instead of scrolling the document.

--- a/src/app.scss
+++ b/src/app.scss
@@ -18,9 +18,10 @@
             width: 100vw;
             height: calc(100vh - 70px);
             scroll-snap-align: start;
+            background-color: whitesmoke;
         }
     }
-    
+
     .textLayer{
         display: none;
     }
