--- a/src/components/resume/resume.scss
+++ b/src/components/resume/resume.scss
@@ -12,10 +12,54 @@
 
   @include mobile{
     width: 100%;
+   
   }
 
+
+  
   &.active {
     background-color: $mainColor;
     color: white;
   }
 }
+
+@include mobile{
+
+    .visually-hidden{
+        display: none;
+    }
+    .page-link > span{
+        font-weight: 900;
+    }
+}
+
+
+.pages{
+    top: 30px;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: whitesmoke;
+    z-index: 100;
+}
+
+.row{
+    background-color: whitesmoke;
+    display: flex;
+    flex-direction: row;   
+}
+.resume.row{
+    transform: translateX(15px);
+}
+button{
+    // position: relative;
+    // top: 50%;
+    // display: flex;
+    // flex-direction: column;
+    // justify-content: center;
+    // align-items: center;
+  }
+  
+ 
